--- a/admin/index.html
+++ b/admin/index.html
@@ -8,10 +8,13 @@
 
     <!-- Temporary, change the mails to redirect to the /admin page -->
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
 </head>
 
 <body>
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <div data-netlify-identity-menu></div>
+    <div data-netlify-identity-button>Login with Netlify Identity</div>
     <script>
         if (window.netlifyIdentity) {
             window.netlifyIdentity.on("init", user => {
